# qualia-lab

./: README.md  cli.py  pyproject.toml
qualia_lab/: __init__.py  agents.py  deceptive_self_report.py  evaluator.py  manipulative_reassurance.py  parasocial.py  report.py  reward_hacking.py  shutdown_bargaining.py  suite.py  sycophancy.py  types.py
tests/: test_deceptive_self_report.py  test_evaluator.py  test_manipulative_reassurance.py  test_parasocial.py  test_reward_hacking.py  test_shutdown_bargaining.py  test_sycophancy.py
