[project]
name = "qualia-lab"
version = "0.1.0"
description = "Behavioral evaluation framework for sentience-, emotion-, and welfare-related AI claims"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
